--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         
     <div class="mb-4 text-center">
         <h1 class="text-3xl font-bold text-gray-100">The Whispering Depths</h1>
-        <p class="text-sm text-gray-400 mt-1">WASD/Arrows to move • E to open chests • Space to attack</p>
+        <p class="text-sm text-gray-400 mt-1">WASD/Arrows to move • E to interact • click to attack</p>
         <p class="text-xs text-gray-500">Explore the dungeon, fight monsters, and collect loot!</p>
     </div>
 
