--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                                     class="stat-button w-full font-semibold py-2 rounded-md transition duration-200 flex items-center justify-center text-sm"></button>
                             </div>
 
-                            <!-- Regeneration Upgrade Card (Static HTML Structure) -->
+                            <!-- regeneration Upgrade Card (Static HTML Structure) -->
                             <div data-stat-key="regeneration"
                                 class="upgrade-card bg-gray-800 rounded-lg p-4 shadow-lg border border-gray-700/50 flex flex-col justify-between">
                                 <div class="flex items-center space-x-3 mb-2">
