--- a/index.html
+++ b/index.html
@@ -135,20 +135,45 @@
             /* Subtle sky blue glow on hover */
             box-shadow: 0 5px 10px -3px rgba(14, 165, 233, 0.4), 0 2px 4px -2px rgba(14, 165, 233, 0.2);
         }
+        #joystick-container {
+            position: relative;
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            background: rgba(0, 0, 0, 0.3);
+            display: none;
+            align-items: center;
+            justify-content: center;
+            touch-action: none; /* Essential for mobile touch events */
+        }
+
+        #joystick-handle {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background: #3498db;
+            position: absolute;
+            transition: transform 0.1s ease; /* For smooth return to center */
+            cursor: grab;
+        }
+
     </style>
     <script src="shop.js" defer></script>
-
+    <script src="joystick.js" defer></script>
     <script src="main.js" defer></script>
 </head>
 
 <body>
 
-    <div class="mb-4 text-center">
+    <div class="mb-4 text-center" id="gametitle">
         <h1 class="text-3xl font-bold text-gray-100">The Whispering Depths</h1>
         <p class="text-sm text-gray-400 mt-1">WASD/Arrows to move • E to interact • click to attack</p>
         <p class="text-xs text-gray-500">Explore the dungeon, fight monsters, and collect loot!</p>
     </div>
-
+    <div id="joystick-container" class="hidden">
+        <div id="joystick-handle"></div>
+    </div>
+    
     <div id="gameContainer">
         <canvas id="gameCanvas"></canvas>
         <input id="chatInput" style="display:none;" autocomplete="off" autocapitalize="off" spellcheck="false"
@@ -171,6 +196,7 @@
                 <div class="inventory-slot" id="gold">💰</div>
             </div>
         </div>
+
         <div class="custom-scrollbar overflow-y-auto hidden" id="shop-ui">
 
             <!-- START: Single Main Container (The entire Shop UI area) -->
@@ -325,8 +351,14 @@
         </div>
 
     </div>
-
-
+    <div class="flex gap-4 mt-6 justify-center hidden" id="interact-buttons">
+        <button class="bg-gray-800 text-white px-6 py-3 rounded-lg shadow hover:bg-gray-700 flex items-center gap-2 text-lg font-semibold">
+            <span>E</span>
+        </button>
+        <button class="bg-gray-800 text-white px-6 py-3 rounded-lg shadow hover:bg-gray-700 flex items-center gap-2 text-lg font-semibold">
+            <i data-lucide="sword" class="w-6 h-6"></i>
+        </button>
+    </div>
 </body>
 
 </html>
