--- a/index.html
+++ b/index.html
@@ -159,8 +159,9 @@
 
     </style>
     <script src="shop.js" defer></script>
-    <script src="joystick.js" defer></script>
     <script src="main.js" defer></script>
+    <script src="joystick.js" defer></script>
+
 </head>
 
 <body>
@@ -352,10 +353,10 @@
 
     </div>
     <div class="flex gap-4 mt-6 justify-center hidden" id="interact-buttons">
-        <button class="bg-gray-800 text-white px-6 py-3 rounded-lg shadow hover:bg-gray-700 flex items-center gap-2 text-lg font-semibold">
+        <button class="bg-gray-800 text-white px-6 py-3 rounded-lg shadow hover:bg-gray-700 flex items-center gap-2 text-lg font-semibold" id="interact-btn">
             <span>E</span>
         </button>
-        <button class="bg-gray-800 text-white px-6 py-3 rounded-lg shadow hover:bg-gray-700 flex items-center gap-2 text-lg font-semibold">
+        <button class="bg-gray-800 text-white px-6 py-3 rounded-lg shadow hover:bg-gray-700 flex items-center gap-2 text-lg font-semibold" id="attack-btn">
             <i data-lucide="sword" class="w-6 h-6"></i>
         </button>
     </div>
