--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         body {
             touch-action: none; 
             user-select: none;
+            -webkit-user-select: none;  
             font-family: 'Inter', sans-serif;
             background-color: #0f172a;
             display: flex;
