--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <script src="https://unpkg.com/lucide@latest"></script>
 
     <style>
+        *{
+            touch-action: none;
+        }
         body {
             touch-action: none; 
             user-select: none;
